# storyteller-ai-analytics

./: .env.example  .gitignore  CONTRIBUTING.md  DOCKER_SETUP.md  IMPORTANT_DESIGN_PHILOSOPHY.md  PIPELINE_TEST_RESULTS.md  README.md  REFERENCES.md  alembic.ini  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  setup.py
alembic/: env.py
alembic/versions/: af6870abb82e_initial_schema_with_all_models.py
app/: README.md  __init__.py  config.py  database.py
app/api/: __init__.py
app/api/routes/: __init__.py
app/dashboard/: __init__.py
app/dashboard/components/: __init__.py
app/models/: __init__.py  database.py
app/processors/: __init__.py  topic_modeler.py  whisper_processor.py
app/utils/: __init__.py
tests/: README.md  __init__.py  conftest.py
tests/integration/: __init__.py  test_full_pipeline.py
tests/unit/: __init__.py  test_database.py  test_whisper_processor.py
